# SortVis

./: .clang-tidy  CMakeLists.txt  README.md  compile_commands.json  main.cc
includes/: sortvis.hh
src/: sortvis.cc
